--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start":"node hello.js",
-     "file":"node filehandling.js",
-     "server":"node httpserver.js"
+    "start": "node hello.js",
+    "file": "node filehandling.js",
+    "server": "node httpserver.js",
+    "express":"node express.js"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
